# rnoh-my-mod.trial

./: .gitattributes  README.md  react-native-my-mod-0.1.0.tgz
example/: App.tsx  app.json  package-lock.json  package.json
harmony/: build-profile.json5  oh-package.json5
harmony/AppScope/: app.json5
harmony/AppScope/resources/base/element/: string.json
harmony/entry/: oh-package-lock.json5  oh-package.json5
harmony/entry/src/main/cpp/: CMakeLists.txt  PackageProvider.cpp
harmony/entry/src/main/ets/: RNPackagesFactory.ets
harmony/entry/src/main/ets/pages/: Index.ets
harmony/my_mod/: oh-package.json5  ts.ts
harmony/my_mod/src/main/: module.json5
harmony/my_mod/src/main/cpp/: CMakeLists.txt  MyModPackage.h
harmony/my_mod/src/main/ets/: MyModModule.ts  MyModPackage.ts
harmony/my_mod/src/ohosTest/: module.json5
pack/: package.json
pack/src/: NativeMyMod.ts
rnoh_harmony_har/: react_native_openharmony-5.0.0.500.har
